	A style is now part of a view, the view command has been revamped
	Bug fix in owl_regex
	Fixed personal aim messages logging to class directory
	Log "LOGIN" or "LOGOUT" for AIM buddy messages message
	zwrite -m now logs and displays an outgoing message
	zwrite -s now works
	Don't allow sending to AIM users with spaces
	Removed libfaim/config.log from CVS
	Fixed some easy fixed-length buffers

2.0.4-pre-1
	Make command line option -n actualy work
	'set style' now works.  Possbile values at the moment are
	   'default' 'basic' or 'perl', but the last only if a
	   format_msg() function is found in .owlconf
	Added the 'oneline' style
	Added the 'default_style' variable
	Added the 'toggle-oneline' command
	the 'o' key is bound to 'toggle-oneline'
	Really use just one view now, named 'main' and recalculate
	  messages when its filter is changed
	
2.0.3
	Don't ring the terminal bell on mail messages.
	Nuke <FONT>
	Make the build work a little better on OSX
	Fixed a bug in fmtext
	Expanded the size of the hostname buffer
	
2.0.2
	Fixed bug in 'startup' command.

2.0.1
	Moved newmsgproc stuff to a function procedure
	Added the 'newlinestrip' variable, on by default, that strips
	  leading and trailing newlines from incoming messages.
	Fixed a case sensitivity probelm in owl_message_is_personal and
	   owl_message_is_private
	The message object now uses a list of attributes internally, in
  	  prep. for supporting new messaging protocols
	owl_function_info now uses fmtext instead of one staticly sized
	  buffer
	in owl_message_get_cc() require that the colon be present after
	  cc.
	Added some defenses against resize crashes, and put in debug
	  messages if they're encountered
	In filters 'true' and 'false' are now valid tokens.
	The 'all' filter has been redefinied to be 'true' and there is a
	  'none' filter defined as 'false'
	Fixed bug in 'unsub' command that could cause file corruption
	In the zlist function, give a more detailed error message if